src/test/deca/context/valid/op_bool_bool.deca
// Description :
// test d'opérations booléennes avec des booléens
//
// Résultats :
// ok

{
  boolean b;
  b = true && false;
  b = true || false;
}
