src/test/deca/context/invalid/op_bool_null.deca
// Description :
// test d'une opération logique entre un booléen et null
//
// Résultats :
// Erreur contextuelle
// Ligne 9 : Opération logique impossible entre des objets de type boolean et null (règle 3.33)

{
  false && null;
}
